# articulator

./: .gitignore  Cargo.toml  build.rs  readme.md
scripts/: .gitignore
src/: constants.rs  json_structs.rs  main.rs  mainpage_generator.rs  powershell_runner.rs  script_runner.rs  scripts.rs
src/handlers/: binary.rs  mod.rs  powershell.rs  python.rs  sh.rs
src/script_handlers/: powershell.rs  python.rs
